--- a/hero_style.css
+++ b/hero_style.css
@@ -9,6 +9,7 @@
 .main-details{
     display: flex;
     justify-content: space-around;
+    margin-top: 2%;
 }
 
 .details-emelemnt{
@@ -19,7 +20,14 @@
 
 }
 .details-image{
-    width: 35%;
+    width: 30%;
+
+}
+
+.details-desc{
+    width: 20%;
+    margin: 1%;
+    border-radius: 1.5rem;
 
 }
 
@@ -31,6 +39,8 @@
     border-radius: 1.5rem;
     margin-top: 1%;
     width: 30%;
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .list-container{
@@ -43,4 +53,8 @@
     justify-content: space-around;
     
 }
+
+
+
+
 
