--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
        
 }
 
-
 .aven-list-item{
     display: flex;
     justify-content: space-between;
@@ -42,4 +41,61 @@
 .img-red{
  
     filter: invert(27%) sepia(51%) saturate(2878%) hue-rotate(346deg) brightness(104%) contrast(97%);
+}
+
+
+
+@media screen and (max-width: 300px){
+    .custom-crousal{
+        height: 60%;
+        width:1rem;
+    }
+
+    .custom-crousal img{
+        height: 40%;
+        width: 30%;
+    }
+
+    h2{
+        font-size: 0.5rem;
+    }
+}
+
+@media screen and (max-width: 600px){
+    .custom-crousal{
+        height: 60%;
+        width: 7rem;
+    }
+
+    .custom-crousal img{
+        height: 60%;
+        width: 50%;
+    }
+}
+
+
+
+@media screen and (max-width: 1000px){
+    .custom-crousal{
+        height: 60%;
+        width: 13rem;
+    }
+
+    .custom-crousal img{
+        height: 60%;
+        width: 60%;
+    }
+}
+
+
+@media screen and (max-width: 1100px){
+    .custom-crousal{
+        height: 60%;
+        width: 22rem;
+    }
+
+    .custom-crousal img{
+        height: 60%;
+        width: 70%;
+    }
 }
